--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -179,7 +179,7 @@
                 
             </div>
                 </div>
-                
+                &nbsp
                 <div class="header-action-icon-2">
                   <a href="/view-wishlist">
                     <img
