--- a/views/user/place-order.ejs
+++ b/views/user/place-order.ejs
@@ -28,7 +28,10 @@
 				<div class="mb-25">
 				  <h4>Checkout</h4>
 				</div>
-				
+				<div class="mb-25">
+					<a href="/profile" class="btn btn-primary">Add address</a>
+				</div>
+
 				<div class="payment_method">
 				  <div class="mb-25">
 					<h5>Select a delivery address</h5>
@@ -295,7 +298,7 @@
 								   method:'post',
 								   data:$('#checkout-form').serialize(),
 								   success:(response)=>{
-									  alert('success')
+									  
 									  if(response.codSuccess){
 										console.log('success')
 										location.href='order-success'
