--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -1,3 +1,21 @@
+<style>
+    .disabled {
+        pointer-events: none;
+        opacity: 0.8;
+        background-color: aliceblue
+        /* optional - to indicate the element is disabled */
+    }
+.text-center {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-weight: bold;
+    }
+    
+</style>
+
+
 <body>
     <!-- Quick view -->
    
@@ -5,102 +23,161 @@
         
         <section class="mt-50 mb-50">
             <div class="container">
+                
                 <div class="row flex-row-reverse">
-                    <div class="col-lg-9">
-                        <form >
-                            <div class="row">
-                            <div class="form-group col-md-4">
-                            <input type="text" placeholder="Search..." name="search">
-                            </div>
-                            <div class="form-group col-md-2">
-                            <input type="submit" value="Search">
-                        </div>
-                    </div>
-                          </form>
-                       
-                        <div class="row product-grid-3">
-                            <% response.forEach(function(response,index) { %>
-                           
-                            <div class="col-lg-4 col-md-4 col-12 col-sm-6">
-
-
-                                <div class="product-cart-wrap mb-30">
-                                    <div class="product-img-action-wrap">
-                                        <div class="product-img product-img-zoom">
-                                            <a href="/zoomView/<%= response._id %>">
-                                                <img class="default-img" src="/uploads/products/<%= response.Image[0] %>" alt="">
-                                                <!-- <img class="hover-img" src="assets/imgs/shop/product-7-1.jpg" alt=""> -->
-                                            </a>
-                                        </div>
-                                        <div class="product-action-1">
-                                            <!-- <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"> -->
-<!-- <i class="fi-rs-search"></i></a> -->
-                                            <a aria-label="Add To Wishlist" class="action-btn hover-up" onclick="addToWishList(`<%= response._id %>`)"><i class="fi-rs-heart"></i></a>
-                                            <!-- <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a> -->
-                                        </div>
-                                        <div class="product-badges product-badges-position product-badges-mrg">
-                                            
-                                        </div>
-                                    </div>
-                                    <div class="product-content-wrap">
-                                        <div class="product-category">
-                                            <a href="shop-grid-right.html"><%=response.category%></a>
-                                        </div>
-                                        <h2><a href="shop-product-right.html"><%=response.Productname%></a></h2>
-                                        <div class="rating-result" title="90%">
-                                            <span>
-                                                <span>95%</span>
-                                            </span>
-                                        </div>
-                                        <div class="product-price">
-                                            <span>₹<%=response.Price%></span>
-                                        
-                                        </div>
-                                        <!-- <div class="product-action-1 show">
-                                            <a aria-label="Add To Cart" class="action-btn hover-up"
-                                            onclick="addToCart(`<%= response._id %>`)"><i class="fi-rs-shopping-bag-add"></i></a>
-                                        </div> -->
-                                    </div>
-                                </div>
-                            </div>
-                             <% }) %>
-                        </div>
-                        <!--pagination-->
-                        <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination justify-content-start">
-                                    <% for (let i = 1; i <= 16; i++) { %>
-                                    <li class="page-item <%= i === 1 ? "active" : "" %>"><a class="page-link" href="?page=<%= i %>"><%= i %></a></li>
-                                    <% } %>
-                                    <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                                    <li class="page-item"><a class="page-link" href="?page=16"><i class="fi-rs-angle-double-small-right"></i></a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                        
-                    </div> 
+                    <!-- filter -->
                     <div class="col-lg-3 primary-sidebar sticky-sidebar">
                         <div class="widget-category mb-30">
                             <h5 class="section-title style-1 mb-30 wow fadeIn animated">Category</h5>
                             <ul class="categories">
-                                <li><a href="/shop">All</a></li>
-
                                 <% cat.forEach(function(cat,index) { %>
-                                <li><a href="/shop/<%=cat.CategoryName%>"><%=cat.CategoryName%></a></li>
+                                <li><a href="/category/<%=cat._id%>"><%=cat.CategoryName%></a></li>
                                 <% }) %>
                             </ul>
+                            
                         </div>
-                       
-
-                        
+                        <form id="sort-form" method="POST" action="/sort">
+                            <div class="sort-container">
+                             
+                               
+                              </select>
+                            </div>
+                          </form>                      
                     </div>
+                    <div class="col-lg-9">
+                       
+                        <div class="row product-grid-3">
+                            <% response.forEach(function(response,index) { %>
+                                <% if(response.Quantity<1){%>
+                                    <div class="col-lg-4 col-md-4 col-12 col-sm-6 disabled" >
+                                        <div class="product-cart-wrap mb-30 ">
+                                            <div class="product-img-action-wrap">
+                                                <div class="product-img product-img-zoom">
+                                                    <span class="text-center text-danger" style="font-weight: bold;">
+                                                        <div class="otofstock" style="position: absolute; top: 0; text-align: center; top: 50%;background-color: beige;">OUT OF STOCK
+                                                        </div>
+                                                    </span>
+                                                    <a href="/zoomView/<%= response._id %>">
+                                                        <img class="default-img" src="/uploads/<%= response.Image[0] %>" alt="">
+                                                        <!-- <img class="hover-img" src="assets/imgs/shop/product-7-1.jpg" alt=""> -->
+                                                        
+                                                    </a>
+
+                                                </div>
+                                                <div class="product-action-1">
+                                                    <a aria-label="Quick view" href="/zoomView/<%= response._id %>" class="action-btn hover-up" >
+                                                    <i class="fi-rs-search"></i></a>
+                                                    <a aria-label="Add To Wishlist" class="action-btn hover-up" onclick="addToWish('<%= response._id %>')"><i class="fi-rs-heart"></i></a>
+                                                </div>
+                                                <div class="product-badges product-badges-position product-badges-mrg">
+                                                    
+                                                </div>
+                                            </div>
+                                            <div class="product-content-wrap">
+                                                <div class="product-category">
+                                                    <a href="/shop-product"><%=response.category%></a>
+                                                </div>
+                                                <h2><a href="/shop-product"><%=response.Productname%></a></h2>
+                                               
+                                                <div class="product-price">
+                                                    <span>₹ <%=response.Price%></span>
+                                                </div >
+        
+                                            </div>
+                                        </div>
+                                    </div>
+                                <%}else{%>
+                                    
+                                    <div class="col-lg-4 col-md-4 col-12 col-sm-6 " >
+                                        <div class="product-cart-wrap mb-30 ">
+                                            <div class="product-img-action-wrap">
+                                                <div class="product-img product-img-zoom">
+                                                    <a href="/zoomView/<%= response._id %>">
+                                                        <img class="default-img" src="/uploads/products/<%= response.Image[0] %>" alt="">
+                                                        <!-- <img class="hover-img" src="assets/imgs/shop/product-7-1.jpg" alt=""> -->
+                                                    </a>
+                                                </div>
+                                                <div class="product-action-1">
+                                                    <a aria-label="Quick view" href="/zoomView/<%= response._id %>" class="action-btn hover-up" >
+                                                    <i class="fi-rs-search"></i></a>
+                                                    <a aria-label="Add To Wishlist" class="action-btn hover-up" onclick="addToWish('<%= response._id %>')"><i class="fi-rs-heart"></i></a>
+                                                </div>
+                                                <div class="product-badges product-badges-position product-badges-mrg">
+                                                    
+                                                </div>
+                                            </div>
+                                            <div class="product-content-wrap">
+                                                <div class="product-category">
+                                                    <a href="/shop-product"><%=response.category%></a>
+                                                </div>
+                                                <h2><a href="/shop-product"><%=response.Productname%></a></h2>
+                                               
+                                                <div class="product-price">
+                                                    <span>₹ <%=response.Price%></span>
+                                                </div >
+        
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <%} %>
+                            
+                             <% }) %>
+                        </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
-        </section>
-    </main>
+            <div style="padding-left: 15cm;" class="pagination-area mt-15 mb-sm-5 mb-lg-0">
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination justify-content-start">
+                    <% for(let i=1;i<=pages;i++){%>
+                    <li class="page-item active">
+                      <a class="page-link" href="/shop?page=<%= i %>"><%= i%></a>
+                    </li>
     
+                    <%}%>
+    
+                    <li class="page-item">
+                      <a class="page-link" href="#"
+                        ><i class="fi-rs-angle-double-small-right"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+        </section>
+    </main>    
 </body>
-<script src="javascripts/script.js"></script>
-
-<!-- Mirrored from wp.alithemes.com/html/evara/evara-frontend/shop-grid-left.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:26:43 GMT -->
 </html>
+
+<script>
+    function addToWish(proId) {
+            // console.log("api vall");
+            console.log(proId,"llllll");
+            
+            $.ajax ({
+                url: `/wishlist/${proId}`,
+                method: 'get',
+                success: (response) => {
+                   
+                    console.log(response);
+                    if(response.status) {
+                        // alert("wowww")
+                        // location.reload();
+                        Toastify({
+                            text: "ADDED TO YOUR WISHLIST",
+                            duration: 3000,
+                            gravity: "bottom",
+                            position: "center",
+                            style: {
+                                background: "linear-gradient(to right, #00b09b, #96c93d)",
+                            }
+                            }).showToast();
+                           
+                    }
+                }
+            })
+        }
+    
+</script>
